--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 :root {
   --bg-color: #3494e4;
   --border-color: #144fc6;
+  --fill-color: #6ab3f8;
 }
 
 * {
@@ -56,8 +57,50 @@ h3 {
   width: 50px;
 }
 
+.cup.cup-small.full {
+  background-color: var(--fill-color);
+  color: #fff;
+}
+
 .cups {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
+  justify-content: center;
   width: 280px;
+}
+
+.remained {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  transition: 0.3s ease;
+}
+
+.remained span {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.remained small {
+  font-size: 12px;
+}
+
+.percentage {
+  background-color: var(--fill-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  font-weight: bold;
+  height: 0;
+  transition: 0.3s ease;
+}
+
+.text {
+  margin: 0 0 5px;
+  text-align: center;
 }
